resources/ssm/fip-example-Istio-delay2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - route:
        - destination:
            host: ratings
            subset: v2
      fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 7s
